# cmake-arduino-cli-experiment

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  cmake-arduino-cli-experiment.ino  find-port.sh  thingy.ino
lib/arduino-dummy/: Arduino_dummy.h  CMakeLists.txt
src/: Arduino_dummy.h  Arduino_local.h  CMakeLists.txt  display.cc  display.h  loop.cpp  loop.h  main.cc  thingy_audio.h  thingy_audio_white_noise.cpp  thingy_audio_white_noise.h  thingy_defs.h  thingy_display.cc  thingy_display.h  thingy_midi.h  thingy_midi_listener.h  thingy_midi_message.h  thingy_synth.cpp  thingy_synth.h
src/display/: display.cc
src/midi/: midi.h
src/synth/: synth.h
test/: CMakeLists.txt  display-test.cc  main.cc  midi_test.cpp
